tests/ui/privacy/private-in-public-non-principal.stderr
warning: trait `PrivNonPrincipal` is more private than the item `leak_dyn_nonprincipal`
  --> $DIR/private-in-public-non-principal.rs:7:1
   |
LL | pub fn leak_dyn_nonprincipal() -> Box<dyn PubPrincipal + PrivNonPrincipal> { loop {} }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function `leak_dyn_nonprincipal` is reachable at visibility `pub`
   |
note: but trait `PrivNonPrincipal` is only usable at visibility `pub(crate)`
  --> $DIR/private-in-public-non-principal.rs:5:1
   |
LL | auto trait PrivNonPrincipal {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[warn(private_interfaces)]` on by default

error: missing documentation for an associated function
  --> $DIR/private-in-public-non-principal.rs:13:9
   |
LL |         pub fn check_doc_lint() {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/private-in-public-non-principal.rs:10:8
   |
LL | #[deny(missing_docs)]
   |        ^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

